k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: infotek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app-source
          mountPath: /app
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      - image: morozovsk/infotek:latest
        imagePullPolicy: Always
        name: app
        volumeMounts:
        - name: app-source
          mountPath: /app
      volumes:
      - name: app-source
        emptyDir: {}
      - name: nginx-config-volume
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: infotek
spec:
  type: NodePort
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
