k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: infotek
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: infotek.new.cy
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 80
